styles.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;800&display=swap');

*{
    box-sizing: border-box;
    padding: 0px;
    margin: 0px;
}

body{
    background: #f7f7f9;
    font-size: 16px;
    font-family: 'Raleway', sans-serif;
    position: relative;
    min-height: 100vh;
}

.page-wrapper {
    padding-bottom: 15vh;
}

/*****************
    Typography
*****************/
a {
    text-decoration: none;
    color: #0a0a09;
}
span {
    width: 100%;
}

.logo-font{
    display: block;
    font-size: .85em;
    margin-left: -1.7em;
}

.h1 {
    font-size: 2em;
    text-transform: capitalize;
    margin: 20px auto;
}

.h3 {
    text-align: left;
}

.about-p {
    margin-bottom: 20px;
}

.p {
    line-height: 1.5;
    height: 6em;
    overflow: hidden;
}

.strong {
    font-weight: 800;
}

.light {
    font-weight: 400;
}

ol li {
    margin: auto 20px;
}

/*****************
    Navigation
*****************/

nav {
    padding: 10px 20px;
    height: 4em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #fff;
    animation: slideInDown;
    animation-duration: 1s;
}

nav ul{
    display: flex;
    list-style: none;
}

nav li {
    margin: 0px 15px;
    font-weight: 600;
}

#logo {
    background: url('../imgs/logo.svg') no-repeat center;
    background-size: cover;
    width: 2em;
    height: 2em;
}

#about-btn:hover, 
#home-btn:hover {
    cursor: pointer;
    opacity: .5;
}

.blog-link:hover {
    cursor: pointer;
    opacity: 0.8;
    transform: scale(1.025);
}

/**********************
    Featured Post
**********************/

#featured-post {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding: 10px 20px;
    color: #f7f7f9;
    background: url('https://images.unsplash.com/photo-1611262588019-db6cc2032da3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2274&q=80s') no-repeat center;
    background-size: cover;
    height: 40vh;
    animation: fadeIn;
    animation-duration: 1s;
}

/**********************
    Blog Post
**********************/
.blog-section,
#recent-blogs {
    padding: 20px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    gap: 1em;
    margin-bottom: 3em;
}

.blog-post {
    display: grid;
    gap: .5em;
    margin-top: 2em;
}

.blog-img {
    background-size: cover !important;
    height: 30vh;
    width: 90vw;
    border-radius: 5px;
    animation: fadeIn;
    animation-duration: 1s;
}

#img-feature{
    background: url('https://images.unsplash.com/photo-1611262588019-db6cc2032da3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2274&q=80s') no-repeat center;
}

#img-1 {
    background: url('https://images.unsplash.com/photo-1550745165-9bc0b252726f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80') no-repeat center;
}

#img-2 {
    background: url('https://images.unsplash.com/photo-1491802259623-5468d0e0d7ea?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2232&q=80') no-repeat center;
}

#img-3 {
    background: url('https://images.unsplash.com/photo-1611427579146-5a418d32f0ca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80') no-repeat bottom;
}

#img-4 {
    background: url('https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1489&q=80') no-repeat center;
}

#img-5 {
    background: url('https://images.unsplash.com/photo-1566647387313-9fda80664848?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2265&q=80') no-repeat center;
}

#img-6 {
    background: url('https://images.unsplash.com/photo-1507721999472-8ed4421c4af2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80') no-repeat center;
}

#view-more {
    text-align: center;
    text-decoration: underline;
}

/**********************
    Single Blog Post
**********************/
.single-post {
    max-width: 90vw;
    margin: 5em auto;
}

.single-post .blog-img {
    height: 40vh;
}

.single-post .strong {
    margin-bottom: 10px;
}

.single-post p {
    margin: 10px auto;
}

/**********************
    Recent Section
**********************/
.recent{
    display: flex;
    flex-direction: column;
    align-items: center;
}

#recent-blogs .blog-img {
    object-fit: cover;
}

/**********************
    About Section
**********************/
#about {
    padding: 45px 20px;
    flex-direction: column;
    justify-content: space-between;
}

#about-img {
    background: url('../imgs/me.jpg') no-repeat center;
    background-size: cover;
    width: 250px;
    height: 250px;
    border-radius: 50%;
    margin-right: 5em;
}

/**********************
    Footer
**********************/
#blog-footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    background: #0a0a09;
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 15vh;
    text-align: center;
    margin-top: 1em;
}


/**********************
    Media Queries
**********************/
@media (min-width: 550px) {
    nav, .single-post {
        font-size: 1.5em;
    }

    .logo-font {
        position: absolute;
        left: 8vw;
        font-weight: 800;
    }

    #featured-post {
        height: 65vh;
        font-size: 1.5em;
    }

    .featured-wrapper {
        max-width: 65vw;
        padding: 30px;
    }

    #featured-post .p {
        line-height: 1.5em;
        height: 4.5em;
    }

    .p {
        height: auto;
    }

    p {
        line-height: 1.5;
    }

    .page-wrapper {
        max-width: 90vw;
        margin: 2em auto 0 auto;
    }

    .blog-img {
        width: 100%;
        background-size: cover !important;
    }

    .large-img {
        width: 100%;
        height: 80vh !important;
        background-size: cover !important;
        margin: 1em auto;
    }

    .blog-section{
       width: 90vw;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       gap: 2em;
    }
    
    #about {
        max-width: 1200px;
        margin: 0 auto;
    }

    .single-post .blog-img {
        height: 60vh;
    }

    #recent-blogs {
        width: 90vw;
        gap: 3em;
    }

}

